--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:04:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">112.5&#176;F</td>
+        <td class="data">112.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">112.5&#176;F</td>
+        <td class="data">112.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">112.5&#176;F</td>
+        <td class="data">112.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">50.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.857 inHg (-0.073)</td>
+        <td class="data">29.856 inHg (-0.080)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.0&#176;F</td>
+        <td class="data">86.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:02:34 PM">
-            112.5</span><br/>
+          <span title="02:07:20 PM">
+            112.8</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:02:34 PM (Sunday)">
-            112.5</span><br/>
+          <span title="02:07:20 PM (Sunday)">
+            112.8</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:02:34 PM">
-            112.5</span><br/>
+          <span title="09/06/2020 02:07:20 PM">
+            112.8</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:02:34 PM" class="hival">
-            112.5</span>
+          <span title="02:07:20 PM" class="hival">
+            112.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:02:34 PM (Sunday)" class="hival">
-            112.5</span>
+          <span title="02:07:20 PM (Sunday)" class="hival">
+            112.8</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:02:34 PM" class="hival">
-            112.5</span>
+          <span title="09/06/2020 02:07:20 PM" class="hival">
+            112.8</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="01:56:02 PM">
-            29.857</span>
+          <span title="02:04:02 PM">
+            29.855</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="01:56:02 PM (Sunday)">
-            29.857</span>
+          <span title="02:04:02 PM (Sunday)">
+            29.855</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          8
+          9
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          8
+          9
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:59:02 PM">
-            86.0</span><br/>
+          <span title="02:04:02 PM">
+            86.1</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:59:02 PM (Sunday)">
-            86.0</span><br/>
+          <span title="02:04:02 PM (Sunday)">
+            86.1</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 17 minutes</td>
+      <td class="data">4 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 17 minutes</td>
+      <td class="data">4 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
