--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:09:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">112.8&#176;F</td>
+        <td class="data">113.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">112.8&#176;F</td>
+        <td class="data">113.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">112.8&#176;F</td>
+        <td class="data">113.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">50.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.856 inHg (-0.080)</td>
+        <td class="data">29.854 inHg (-0.079)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.1&#176;F</td>
+        <td class="data">86.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:07:20 PM">
-            112.8</span><br/>
+          <span title="02:13:30 PM">
+            113.2</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:07:20 PM (Sunday)">
-            112.8</span><br/>
+          <span title="02:13:30 PM (Sunday)">
+            113.2</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:07:20 PM">
-            112.8</span><br/>
+          <span title="09/06/2020 02:13:30 PM">
+            113.2</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="08/16/2020 03:43:16 PM">
-            112.8</span><br/>
+          <span title="09/06/2020 02:13:30 PM">
+            113.2</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="08/16/2020 03:43:16 PM">
-            112.8</span><br/>
+          <span title="09/06/2020 02:13:30 PM">
+            113.2</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:07:20 PM" class="hival">
-            112.8</span>
+          <span title="02:13:30 PM" class="hival">
+            113.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:07:20 PM (Sunday)" class="hival">
-            112.8</span>
+          <span title="02:13:30 PM (Sunday)" class="hival">
+            113.2</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:07:20 PM" class="hival">
-            112.8</span>
+          <span title="09/06/2020 02:13:30 PM" class="hival">
+            113.2</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="08/16/2020 03:43:16 PM" class="hival">
-            112.8</span>
+          <span title="09/06/2020 02:13:30 PM" class="hival">
+            113.2</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="08/16/2020 03:43:16 PM" class="hival">
-            112.8</span>
+          <span title="09/06/2020 02:13:30 PM" class="hival">
+            113.2</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="02:04:02 PM">
-            29.855</span>
+          <span title="02:09:02 PM">
+            29.853</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:04:02 PM (Sunday)">
-            29.855</span>
+          <span title="02:09:02 PM (Sunday)">
+            29.853</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:04:02 PM">
-            86.1</span><br/>
+          <span title="02:11:02 PM">
+            86.2</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:04:02 PM (Sunday)">
-            86.1</span><br/>
+          <span title="02:11:02 PM (Sunday)">
+            86.2</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 22 minutes</td>
+      <td class="data">4 days, 23 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 22 minutes</td>
+      <td class="data">4 days, 23 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
