--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:14:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">113.2&#176;F</td>
+        <td class="data">113.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">113.2&#176;F</td>
+        <td class="data">113.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">113.2&#176;F</td>
+        <td class="data">113.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.5&#176;F</td>
+        <td class="data">50.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.854 inHg (-0.079)</td>
+        <td class="data">29.853 inHg (-0.079)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
     </tbody>
   </table>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:13:30 PM">
-            113.2</span><br/>
+          <span title="02:17:14 PM">
+            113.6</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:13:30 PM (Sunday)">
-            113.2</span><br/>
+          <span title="02:17:14 PM (Sunday)">
+            113.6</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:13:30 PM">
-            113.2</span><br/>
+          <span title="09/06/2020 02:17:14 PM">
+            113.6</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:13:30 PM">
-            113.2</span><br/>
+          <span title="09/06/2020 02:17:14 PM">
+            113.6</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:13:30 PM">
-            113.2</span><br/>
+          <span title="09/06/2020 02:17:14 PM">
+            113.6</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:13:30 PM" class="hival">
-            113.2</span>
+          <span title="02:17:14 PM" class="hival">
+            113.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:13:30 PM (Sunday)" class="hival">
-            113.2</span>
+          <span title="02:17:14 PM (Sunday)" class="hival">
+            113.6</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:13:30 PM" class="hival">
-            113.2</span>
+          <span title="09/06/2020 02:17:14 PM" class="hival">
+            113.6</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:13:30 PM" class="hival">
-            113.2</span>
+          <span title="09/06/2020 02:17:14 PM" class="hival">
+            113.6</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:13:30 PM" class="hival">
-            113.2</span>
+          <span title="09/06/2020 02:17:14 PM" class="hival">
+            113.6</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:11:02 PM">
-            86.2</span><br/>
+          <span title="02:15:02 PM">
+            86.3</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:11:02 PM (Sunday)">
-            86.2</span><br/>
+          <span title="02:15:02 PM (Sunday)">
+            86.3</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 27 minutes</td>
+      <td class="data">4 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 27 minutes</td>
+      <td class="data">4 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
