--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:34:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">113.5&#176;F</td>
+        <td class="data">113.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">113.5&#176;F</td>
+        <td class="data">113.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">113.5&#176;F</td>
+        <td class="data">113.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.846 inHg (-0.078)</td>
+        <td class="data">29.845 inHg (-0.079)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.5&#176;F</td>
+        <td class="data">86.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:17:14 PM">
-            113.6</span><br/>
+          <span title="02:37:44 PM">
+            113.7</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:17:14 PM (Sunday)">
-            113.6</span><br/>
+          <span title="02:37:44 PM (Sunday)">
+            113.7</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:17:14 PM">
-            113.6</span><br/>
+          <span title="09/06/2020 02:37:44 PM">
+            113.7</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:17:14 PM">
-            113.6</span><br/>
+          <span title="09/06/2020 02:37:44 PM">
+            113.7</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:17:14 PM">
-            113.6</span><br/>
+          <span title="09/06/2020 02:37:44 PM">
+            113.7</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:17:14 PM" class="hival">
-            113.6</span>
+          <span title="02:37:44 PM" class="hival">
+            113.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:17:14 PM (Sunday)" class="hival">
-            113.6</span>
+          <span title="02:37:44 PM (Sunday)" class="hival">
+            113.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:17:14 PM" class="hival">
-            113.6</span>
+          <span title="09/06/2020 02:37:44 PM" class="hival">
+            113.7</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:17:14 PM" class="hival">
-            113.6</span>
+          <span title="09/06/2020 02:37:44 PM" class="hival">
+            113.7</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:17:14 PM" class="hival">
-            113.6</span>
+          <span title="09/06/2020 02:37:44 PM" class="hival">
+            113.7</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="02:32:02 PM">
-            29.846</span>
+          <span title="02:34:02 PM">
+            29.843</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:32:02 PM (Sunday)">
-            29.846</span>
+          <span title="02:34:02 PM (Sunday)">
+            29.843</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          10
+          11
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          10
+          11
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:25:02 PM">
-            86.5</span><br/>
+          <span title="02:37:02 PM">
+            86.7</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:25:02 PM (Sunday)">
-            86.5</span><br/>
+          <span title="02:37:02 PM (Sunday)">
+            86.7</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 47 minutes</td>
+      <td class="data">4 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 47 minutes</td>
+      <td class="data">4 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
